--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href="index.html" class="nav-item nav-link active">BLOG</a>
-          <a href="about.html" class="nav-item nav-link">CONTATO</a>
+          <!-- <a href="index.html" class="nav-item nav-link active">BLOG</a> -->
+          <a href="https://wa.me/55041991814154?text=Tenho%20interesse%20em%20turbinar%20minha%20empresa!%20-InovaLotus" class="nav-item nav-link">CONTATO</a>
           <a href="contact.html" class="nav-item nav-link"></a>
         </div>
         <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
@@ -211,6 +211,126 @@
     </div>
     <!-- Feature End -->
 
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="section-title text-center">
+          <h1 class="display-5 mb-5">Nossos Serviços</h1>
+        </div>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-1.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Marketing Digital</h4>
+                <p>
+                  Estratégia, análise e <br>planejamento.
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-2.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Branding</h4>
+                <p>
+                  Pesquisa, design, <br>logo e nome.
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-3.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Gestão de Tráfego</h4>
+                <p>
+                  Anúncios, copywriting, ads e campanhas
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-4.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Web Site</h4>
+                <p>
+                  Landing page, sistemas web, SEO e analytics
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-5.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Identidade Visual</h4>
+                <p>
+                  Paletas de cores, fontes,<br> UX e UI
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="service-item">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/service-6.jpg" alt="" />
+              </div>
+              <div
+                class="p-4 text-center border border-5 border-light border-top-0"
+              >
+                <h4 class="mb-3">Vendas, SDR & BDR</h4>
+                <p>
+                  Cold outreach, email, <br>fechamento
+                </p>
+                <!-- <a class="fw-medium" href=""
+                  >Read More<i class="fa fa-arrow-right ms-2"></i
+                ></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Service End -->
+
     <!-- FORM Start -->
     <div class="container-fluid bg-light overflow-hidden px-lg-0">
       <div class="container quote px-lg-0">
@@ -320,128 +440,6 @@
       </div>
     </div>
     <!-- Quote End -->
-
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="section-title text-center">
-          <h1 class="display-5 mb-5">Nossos Serviços</h1>
-        </div>
-        <div class="row g-4">
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-1.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Marketing Digital</h4>
-                <p>
-                  Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam
-                  lorem diam.
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-2.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Branding</h4>
-                <p>
-                  Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam
-                  lorem diam.
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-3.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Gestão de Tráfego</h4>
-                <p>
-                  Anúncios, copywriting, ads e campanhas
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-4.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Web Site</h4>
-                <p>
-                  Landing page, sistemas web, SEO e analytics
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-5.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Identidade Visual</h4>
-                <p>
-                  Paletas de cores, fontes,<br> UX e UI
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="service-item">
-              <div class="overflow-hidden">
-                <img class="img-fluid" src="img/service-6.jpg" alt="" />
-              </div>
-              <div
-                class="p-4 text-center border border-5 border-light border-top-0"
-              >
-                <h4 class="mb-3">Vendas, SDR & BDR</h4>
-                <p>
-                  Cold outreach, email, <br>fechamento
-                </p>
-                <a class="fw-medium" href=""
-                  >Read More<i class="fa fa-arrow-right ms-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Service End -->
 
     <!-- About Start -->
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
