--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a href="https://wa.me/55041991814154?text=Tenho%20interesse%20em%20turbinar%20minha%20empresa!%20-InovaLotus" class="nav-item nav-link">CONTATO</a>
           <a href="contact.html" class="nav-item nav-link"></a>
         </div>
-        <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
+        <a href="#form" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"
           >Receba uma Avaliação<i class="fa fa-arrow-right ms-3"></i
         ></a>
       </div>
@@ -332,7 +332,7 @@
     <!-- Service End -->
 
     <!-- FORM Start -->
-    <div class="container-fluid bg-light overflow-hidden px-lg-0">
+    <div class="container-fluid bg-light overflow-hidden px-lg-0" id="form">
       <div class="container quote px-lg-0">
         <div class="row g-0 mx-lg-0">
           <div class="col-lg-6 ps-lg-0" style="min-height: 400px">
