--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
               <div class="section-title text-start">
                 <h1 class="display-5 mb-4">Por que fechar conosco?</h1>
               </div>
+              
               <div class="row g-4">
-                <div class="col-6">
+                <div class="col-12">
                   <div class="d-flex align-items-center">
                     <div
                       class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white"
@@ -154,7 +155,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                
+                <div class="col-12">
                   <div class="d-flex align-items-center">
                     <div
                       class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white"
@@ -167,7 +169,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12">
                   <div class="d-flex align-items-center">
                     <div
                       class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white"
@@ -180,7 +182,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12">
                   <div class="d-flex align-items-center">
                     <div
                       class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white"
@@ -442,7 +444,7 @@
     <!-- Quote End -->
 
     <!-- About Start -->
-    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container-fluid bg-light overflow-hidden px-lg-0">
       <div class="container about px-lg-0">
         <div class="row g-0 mx-lg-0">
           <div class="col-lg-6 ps-lg-0" style="min-height: 400px">
